--- a/application_prod.yaml
+++ b/application_prod.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook
+  name: guestbook-prod
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/nitinreddy1/argocd_poc.git
     targetRevision: main
-    path: guestbook
+    path: guestbook/overlays/prod
   destination:
     server: https://kubernetes.default.svc
-    namespace: guestbook
+    namespace: prod
   syncPolicy:
     automated: 
       selfHeal: true 
